fix: header height on mobile version

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -57,6 +57,7 @@
     background-image: url(../../images/F1-logo.svg);
     background-repeat: no-repeat;
     background-size: contain;
+    background-position: center;
     width: 110px;
     height: 33px;
   }
@@ -85,6 +86,8 @@
 
 @media (max-width: 425px) {
   .header {
+    height: 35px;
+
     &__navbar {
       gap: 20px;
     }
